# RapidIndex

./: .env.example  AGENTS.md  Dockerfile  docker-compose.yml  main.py  migrate.py  pyproject.toml  strategy.md
docs/: composition.md  config.md  deployment.md  nzb.md  overview.md  parsing.md  pipeline.md  routing.md  storage.md  utils.md
docs/api/: newznab.md  rest.md  stremio.md
docs/enrichers/: base.md  tmdb.md  tpdb.md
docs/ingesters/: base.md  generic_html.md  spotnet.md  xxxclub.md
src/: config.py
src/api/: app.py  deps.py  feed.py  xml_builder.py
src/api/routers/: files.py  newznab.py  nzb.py  people.py  performers.py  releases.py  scenes.py  titles.py  torznab.py  ui.py
src/enrichers/: base.py  tmdb.py  tpdb.py
src/ingesters/: base.py
src/ingesters/torrent/: xxxclub.py
src/ingesters/usenet/: nntp.py  spotnet.py
src/nzb/: builder.py  extractor.py
src/parsing/: title_parser.py
src/pipeline/: enricher_worker.py  ingester_scheduler.py
src/routing/: content_router.py
src/storage/: db.py  models.py
src/storage/migrations/: env.py
src/storage/migrations/versions/: 0001_initial.py  0002_add_file_tables.py
src/storage/repositories/: people_repo.py  performer_repo.py  release_repo.py  scan_state_repo.py  scene_repo.py
src/utils/: categories.py  debrid.py  http.py  rate_limiter.py  ui_cache.py
templates/: base.html  configure.html  library.html  releases.html  stream.html
templates/xxx/: _scene_modal.html  _scene_modal_script.html  network.html  networks.html  performer.html  performers.html  scenes.html  site.html  sites.html
